--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -25,7 +25,7 @@ jobs:
 
     - name: Run the send_bong.py script
       run: |
-        python send_bong.py
+        python bot.py
       env:
         TELEGRAM_API_TOKEN: ${{ secrets.TELEGRAM_API_TOKEN }}
         TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
