--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -2,9 +2,16 @@ name: Send Bong Hourly
 
 on:
   schedule:
-    - cron: '*/5 * * * *'  # Runs every 5 minutes for testing
-  workflow_dispatch:  # Allows manual triggering of the workflow
+    - cron: '*/5 * * * *'
 
+  workflow_dispatch:
+    inputs:
+      deployment_target:
+        description: Choose target
+        required: true
+        type: choice
+        options:
+          - Run tests
 
 jobs:
   send_bong:
